plugins {
    id 'com.gradleup.shadow' version '9.0.0-beta12'
    id 'java-library'
    id 'maven-publish'
}

repositories {
    mavenCentral()
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

dependencies {
    implementation 'dnsjava:dnsjava:3.6.3'
    implementation 'com.sanctionco.jmail:jmail:2.0.0'

    testImplementation(platform('org.junit:junit-bom:5.12.2'))
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

publishing {
    repositories {
        maven {
            name = "GitHubPackages"
            url = uri("https://maven.pkg.github.com/noticeable-app/kickmail")
            credentials {
                username = project.findProperty("gpr.user") ?: System.getenv("GH_PACKAGES_USER")
                password = project.findProperty("gpr.key") ?: System.getenv("GH_PACKAGES_WRITE_TOKEN")
            }
        }
    }
    publications {
        github(MavenPublication) {
            groupId = 'io.noticeable'
            artifactId = 'kickmail'
            version = '1.0.0'

            from(components.java)
        }
    }
}

build.dependsOn clean
publish.dependsOn build

tasks.withType(JavaCompile) {
    options.compilerArgs << '-parameters'
    options.compilerArgs << '-Xlint:deprecation'
}

test {
    useJUnitPlatform()
}
